# claro

./: .env  .env.dev  .gitignore  DEVELOPMENT_PLAN.md  README.md  WARP.md  carlo_app.py  claro_app.nix  claro_app.py  claro_app_android.py  claro_app_core.py  claro_app_linux.py  claro_platform.py  default.nix  flake.nix  main.py  pyproject.toml  setup.py
backend/: README.md  __init__.py  config.py  default.nix  exceptions.py  llm.py  main.py  middleware.py  sessions.py
backend/agent/: README.md  __init__.py  agent.py  state.py  tools.py
backend/api/: __init__.py  actions.py  chat.py  notifications.py  settings.py
backend/memory/: __init__.py  base.py  mock_memory.py  zep_memory.py
backend/notification_schedule/: README.md  config_parser.py  default.nix  example_config.yaml  installer.py  main.py
backend/notification_schedule/templates/units/: claro-notification-scheduler.service  claro-notification-scheduler.timer
builds/android/: build_claro_app.sh  build_notification_scheduler.sh  build_notification_worker.sh  buildozer.claro.spec  buildozer.notification.spec  buildozer.scheduler.spec  buildozer.spec  claro_app_android.py  claro_requirements.txt  run_buildozer_fhs.sh
builds/android/p4a_recipes/hostpython3/: __init__.py
builds/android/p4a_recipes/libffi/: __init__.py  remove-version-info.patch
docs/human_made/: components.md
entrypoints/: claro_app_android.py  claro_app_core.py  claro_app_linux.py
frontend/: .env.development  .env.production  .gitignore  default.nix  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api-client/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: action-dialog.tsx  chat.tsx  settings-page.tsx
frontend/src/components/ui/: toast.tsx
frontend/src/hooks/: useActions.ts  useChatApi.ts
frontend/src/lib/: api-config.ts  session-storage.ts
nix/: devenv.nix
notes/: app_technical.md  plan1.md  ux.md
notification/: default.nix  main.py  main_android.py  main_linux.py
notification_schedule/: README.md  __init__.py  config_parser.py  default.nix  main.py  main_android.py  main_linux.py
os_interfaces/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  android.py  base.py  linux.py
remember/: README.md  SUMMARY.md  __init__.py  default.nix  diff_parser.py  diff_types.py  main.py  send.py
remember/ingestors/: README.md  __init__.py  ingestor.py
remember/post_commit_hook/: __init__.py  default.nix  diff_parser.py  diff_types.py  main.py
remember/remember_repo/: __init__.py  default.nix  main.py
test/: __init__.py  test_agent.py  test_agent_tool_calls.py  test_backend.py  test_diff_processing.py  test_notification_scheduling.py  test_os_interfaces_linux.py  test_remember_hook.py  test_session_persistence.py
