[project]
name = "carlo"
version = "0.1.0"
description = "Personal AI assistant app with chat interface and notifications"

requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pywebview",
  "langgraph",
  "langchain",
  "langchain-openai",
  "zep-python",
  "pyyaml",
  "pydantic",
  "keyring",
  "python-dotenv",
  "zep-cloud",
  "ipywidgets",
  "asgi-correlation-id",
  "slowapi",
]

[project.optional-dependencies]
linux = [
  "desktop-notifier",
  "pystemd",
]
android = [
  "pyjnius",
  "buildozer",
]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

# [build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"
# 
# [tool.setuptools.packages.find]
# where = ["src"]
# 
# [tool.setuptools.package-dir]
# "" = "src"

[tool.pyright]
venvPath = ".devenv/state"
venv = "venv"

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"

