[project]
name = "claro"
version = "0.1.0"
description = "Personal AI assistant app with chat interface and notifications"

requires-python = ">=3.12"
dependencies = [
  "fastapi==0.119.0",
  "uvicorn[standard]",
  "pywebview",
  "langgraph",
  "langchain",
  "langchain-openai",
  "zep-python",
  "pyyaml",
  "pydantic",
  "keyring",
  "python-dotenv",
  "zep-cloud",
  "ipywidgets",
  "asgi-correlation-id",
  "slowapi",
  "platformdirs",
]

[project.optional-dependencies]
linux = [
  "desktop-notifier",
  "pystemd",
]
android = [
  "pyjnius",
  "buildozer",
]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "os_interfaces"]

[tool.pyright]
venvPath = ".devenv/state"
venv = "venv"

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"

