[project]
name = "claro"
version = "0.1.0"
description = "Personal AI assistant app with chat interface and notifications"

requires-python = ">=3.11"
dependencies = [
  "pip",
  "fastapi==0.119.0",
  "uvicorn[standard]",
  "pywebview",
  "langgraph",
  "langchain",
  "langchain-openai",
  "langchain-xai",
  "zep-python",
  "pyyaml",
  "pydantic",
  "keyring",
  "python-dotenv",
  "zep-cloud",
  "ipywidgets",
  "asgi-correlation-id",
  "slowapi",
  "platformdirs",
  "pynentry",
  "gitpython",
  "unidiff",
  "llama-index-core",
  "llama-index-readers-file",
  "mistletoe",
]

[project.optional-dependencies]
linux = [
  "desktop-notifier",
  "pystemd",
]
android = [
  "pyjnius",
  "buildozer",
  "cython==3.0.12",
]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "os_interfaces", "remember", "notification", "notification_schedule", "entrypoints"]

# [tool.hatch.build.targets.wheel]
# packages = ["backend", "os_interfaces", "remember", "notification", "notification_schedule"]

[tool.pyright]
venvPath = ".devenv/state"
venv = "venv"

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"
